# brain_ds

./: .gitignore  .release-please-config.json  AGENTS.md  AGENT_FLOW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  bash.exe.stackdump  brain_ds.cmd  brain_ds.ps1  brain_ds.sh  install-opencode.ps1  install-opencode.sh  pyproject.toml  skills-lock.json  tmp_sample_graph.json  tmp_viewer.html
.atl/: skill-registry.md
.claude/: settings.json
.claude/agents/: blind-agentic-path-evaluator.md  brainds-connection-mapper.md  brainds-currency-elicitor.md  brainds-kpi-composer.md  brainds-source-explorer.md
.elicit/: README.md  brd-live-contract-verify-2026-06-14.md  dry-run-live-e2e-synthetic-2026-06-15.md  map-live-contract-verify-2026-06-14.md  plan-live-e2e-synthetic-2026-06-15.md  recon-live-e2e-synthetic-2026-06-15.md  source-docs-live-contract-verify-customers-2026-06-14.md  source-docs-live-contract-verify-orders-2026-06-14.md  source-docs-live-e2e-synthetic-slice-001-2026-06-15.md  verify-live-contract-verify-2026-06-14.md
.elicit/_run1-diagnostic/: brd-live-e2e-synthetic-2026-06-14.md  source-docs-orders-db-customers-2026-06-14.md  source-docs-orders-db-orders-2026-06-14.md  verify-live-e2e-synthetic-2026-06-14.md
.github/workflows/: build-macos-exe.yml  build-windows-exe.yml  release-please.yml  test-postgres-connector.yml
.opencode/: opencode.json  package.json  pnpm-lock.yaml
brain_ds/: __init__.py  __main__.py  demo.py  harness_check.py  workspaces.py
brain_ds/api/: __init__.py  events.py  outbox.py  receipt_store.py  routes.py  server.py
brain_ds/connectors/: __init__.py  base.py  change_detection.py  csv_connector.py  google_sheets_api.py  google_sheets_connector.py  postgres_connector.py  sqlite_connector.py
brain_ds/currency/: __init__.py  coverage.py  criticality.py  gaps.py  propagation.py  stakeholder.py  staleness.py
brain_ds/dossier/: __init__.py  _serialization_utils.py  assembler.py  business_assembler.py  business_models.py  business_read_path.py  business_router.py  business_serialization.py  models.py  serialization.py
brain_ds/mcp/: __init__.py  completeness.py  config.py  grounding.py  security.py  server.py  tools.py
brain_ds/ontology/: __init__.py  edge_compatibility.py  entity_types.py  graph_model.py  relationship_types.py
brain_ds/pipeline/: __init__.py  invariants.py
brain_ds/retrieval/: __init__.py  evaluation.py  hybrid_router.py  models.py  neighborhood.py  serialization.py
brain_ds/scoring/: __init__.py  embedder.py  engine.py  factors.py  models.py  node_text.py  query_complexity.py  retrieval.py  similarity.py  stopwords.py
brain_ds/store/: __init__.py  cluster_governance.py  errors.py  graph_store.py  migrations.py  models.py  repair.py  repository.py  schema.py  serialization.py
brain_ds/ui/: __init__.py  __main__.py  bundle_freshness.py  cli.py  contrast-audit.json  icons.py  onboarding.py  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  render_context.py  server.py  setup.py  simple_renderer.py  template_renderer.py  (+4 more)
commands/: brain-ds-brd.md  brain-ds-map.md  brain-ds-pipeline.md  elicit-context.md  generate-brd.md  map-connections.md
docs/: SDD_FLOW.md  blind-agentic-eval.md  edge-judge-rollout.md
prompts/: brain-ds-orchestrator.md  brainds-brd-writer.md  brainds-connection-mapper.md  brainds-currency-elicitor.md  brainds-graph-mapper.md  brainds-kpi-composer.md  brainds-semantic-verifier.md  brainds-source-explorer.md
review/: brd-sidebar-wikilinks-review.md  pr2-ui-exe-review.md
scripts/: build-macos.sh  build-windows-exe.ps1  generate_viewer.py  repair_mojibake.py  sync_mirrors_hook.py  test_profiles.py
skills/: SHARED_CONTEXT.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/bootstrap/: bootstrap.js  index.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  desktop.rs  main.rs
src-tauri/windows/: hooks.nsh
tests/: __init__.py  conftest.py  test_a11y.py  test_add_edge_ledger.py  test_agent_structure.py  test_agentic_tool_flow_eval.py  test_ai_actions_panel_pr3.py  test_api_events.py  test_api_live.py  test_api_routes_ai.py  test_api_routes_search.py  test_api_routes_secrets.py  test_app_generation_workflows.py  test_aws_google_sheets_adapter.py  test_aws_postgres_adapter.py  test_aws_secrets_adapter.py  test_backfill_cli.py  test_blind_agentic_eval_collect.py  test_blind_agentic_eval_collect_and_score.py  test_blind_agentic_eval_loop.py  test_blind_agentic_eval_plan.py  test_blind_agentic_eval_prepare.py  test_blind_agentic_eval_runbook.py  test_blind_agentic_eval_score.py  test_blind_agentic_path_evaluator_contract.py  test_branding_a.py  test_canvas_renderer.py  test_change_detection.py  test_cli.py  test_cli_serve.py  test_connector_secret_contract.py  test_connector_write_free.py  test_connectors.py  test_connectors_import_smoke.py  test_contract_version_sync.py  test_currency_coverage.py  test_currency_criticality.py  test_currency_gaps.py  test_currency_pending.py  test_currency_propagation.py  (+129 more)
(+331 files in other folders)
