[project]
name = "brain_ds"
version = "0.1.0"
description = "Enterprise Data & Knowledge Mapper"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "networkx>=3.0",
  "uvicorn[standard]>=0.35.0",
  "websockets>=15.0.0",
]

[project.optional-dependencies]
simple = [
  "pyvis>=0.3",
]

[project.scripts]
brain_ds = "brain_ds.ui.__main__:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["brain_ds*"]

[tool.setuptools.package-data]
"brain_ds.ui" = [
  "templates/*.html",
  "assets/*.css",
  "assets/*.js",
  "assets/*.svg",
  "assets/icons/*.svg",
  "static/*.css",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]

[tool.ruff]
target-version = "py311"
exclude = [
    ".atl",
    ".build-venv",
    ".venv",
    "build",
    "dist",
    "src-tauri/target",
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
files = ["brain_ds", "tests"]
exclude = "(?x)(^build/|^dist/|^src-tauri/target/|^brain_ds/ui/node_modules/)"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
