[package]
name = "brain_ds_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tauri = { version = "2.0.0", features = ["unstable"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
bundled = []
